--- a/cse341-project/views/pages/ta02.ejs
+++ b/cse341-project/views/pages/ta02.ejs
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <% include ../includes/header.ejs %>
+  </head>
 
-<head>
-  <% include ../includes/header.ejs %>
-</head>
-
-<body>
-  <% include ../includes/nav.ejs %>
+  <body>
+    <% include ../includes/nav.ejs %>
     <div class="jumbotron text-center">
       <div class="container">
-        <h1>
-          <%= title %>
-        </h1>
+        <h1><%= title %></h1>
         <p>This is the placeholder for Team Activity 02</p>
+        <form action="/ta02/addUser" method="POST">
+          <label for="addUser">Add</label>
+          <input type="text" name="addUser" />
+          <button type="submit">Add User</button>
+        </form>
+        <form action="/ta02/removeUser" method="POST">
+          <label for="removeUser">Remove</label>
+          <input type="text" name="removeUser" />
+          <button type="submit">Remove User</button>
+        </form>
+        <% if (users.length) { %>
+        <h1>List of Users</h1>
+        <ul>
+          <% for ( user of users) { %>
+          <li><%= user.name %></li>
+          <% } %>
+        </ul>
+        <% } %>
       </div>
     </div>
-    <div class="container">
-
-    </div>
-
-
-</body>
-
+    <div class="container"></div>
+  </body>
 </html>
