New Update again

--- a/cse341-project/views/pages/ta03.ejs
+++ b/cse341-project/views/pages/ta03.ejs
@@ -17,15 +17,6 @@
         </form>
       </div>
     </div>
-    <div class="container">
-      <% if(items.length){ %>
-      <h1>Search Results</h1>
-      <ul>
-        <% for(let user of users) { %>
-        <li><%= user.Name %></li>
-        <% } %>
-      </ul>
-      <% } %>
-    </div>
+    <div class="container"></div>
   </body>
 </html>
